--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,5 +1,34 @@
 <%- include('partials/header'); -%>
 
-<div>Hey this is Signup Page</div>
+<form action="">
+    <h1>Sign Up</h1>
+    <label for="email">Email</label>
+    <input type="text" name="email" />
+    <div class="email error"></div>
+    <label for="password">Password</label>
+    <input type="password" name="password" />
+    <div class="password error"></div>
+    <button>Sign up</button>
+</form>
+
+<script>
+    const form = document.querySelector("form");
+    form.addEventListener("submit", async (event) => {
+        event.preventDefault();
+
+        const email = form.email.value;
+        const password = form.password.value;
+
+        try {
+            const res = await fetch("/signup", {
+                method: "POST",
+                body: JSON.stringify({ email, password }),
+                headers: { "Content-Type": "application/json" },
+            });
+        } catch (error) {
+            console.log(error);
+        }
+    });
+</script>
 
 <%- include('partials/footer'); -%>
